--- a/Infrastructure/Presentation/Presentation.csproj
+++ b/Infrastructure/Presentation/Presentation.csproj
@@ -14,4 +14,7 @@
     <ProjectReference Include="..\..\Core\Services.Abstractions\Services.Abstractions.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
 </Project>
