--- a/Infrastructure/Persistence/Persistence.csproj
+++ b/Infrastructure/Persistence/Persistence.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.18" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Core\Services\Services.csproj" />
   </ItemGroup>
 
