--- a/Core/Services/Services.csproj
+++ b/Core/Services/Services.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Services.Abstractions\Services.Abstractions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+  </ItemGroup>
+
 </Project>
