Order Module - UpdateStatus Endpoint and Send Email Service

--- a/OrderManagmentSystem.API/appsettings.json
+++ b/OrderManagmentSystem.API/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "InMemoryDB": "OrderManagementInMemoryDB"
+  },
+  "EmailSetting": {
+    "SenderEmail": "salma.hossam2003@gmail.com",
+    "DisplayName": "Order-Management-System",
+    "Password": "ucskmpxjyezgtdfw",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
