--- a/Core/Services/Services.csproj
+++ b/Core/Services/Services.csproj
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="MailKit" Version="4.13.0" />
+    <PackageReference Include="MimeKit" Version="4.13.0" />
   </ItemGroup>
 
 </Project>
